third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/init/shadowing_field.stderr
error[E0308]: mismatched types
  --> tests/ui/compile-fail/init/shadowing_field.rs:10:31
   |
10 |     let _ = init!(Foo { x, y: x });
   |                            -  ^ expected `usize`, found `&mut usize`
   |                            |
   |                            arguments to this function are incorrect
   |
note: function defined here
  --> $RUST/core/src/ptr/mod.rs
   |
   | pub const unsafe fn write<T>(dst: *mut T, src: T) {
   |                     ^^^^^
help: consider dereferencing the borrow
   |
10 |     let _ = init!(Foo { x, y: *x });
   |                               +
